# markdown2audio

./: README.md  markdown-to-audio.py  pyproject.toml
markdown_to_speech/: __init__.py  cli.py
